--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
+author = "Olger Warnier <olger@spectare.nl>"
+edition = "2018"
+license = "MIT"
 name = "actix-4-jwt-auth"
 version = "0.1.0"
-edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,7 +11,7 @@ edition = "2018"
 actix-rt = "2.2.0"
 actix-service = "2.0.0-beta.5"
 actix-web = "4.0.0-beta.9"
-alcoholic_jwt = "1.0.1"
+biscuit = {git = "https://github.com/lawliet89/biscuit", branch = "master"}
 bytes = "1.1.0"
 derive_more = "0.99.16"
 env_logger = "0.9.0"
@@ -23,3 +25,6 @@ serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 thiserror = "1.0.29"
 tokio = {version = "1.6.0", features = ["full"]}
+
+[dev-dependencies]
+pretty_assertions = "1.0.0"
