--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,11 @@
   jobs:
     build:
       docker:
-        - image: spectare/oidc-token-test-service:latest
         - image: cimg/rust:1.55.0
 
       environment:
         # Set your codecov token if your repository is private.
-        CODECOV_TOKEN: "TOKEN" 
+        CODECOV_TOKEN: "CHANGE_TO_VALID_TOKEN" 
         TZ: "/usr/share/zoneinfo/Europe/Paris"
         # Setting environment for the oidc-token-test-service
         BIND: 0.0.0.0
