Use a build image that patches the cimg/rust images

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
   jobs:
     build:
       docker:
-        - image: cimg/rust:1.54.0
+        - image: spectare/rust-build:latest
 
       environment:
         # Set your codecov token if your repository is private.
