--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,16 +2,14 @@
   jobs:
     build:
       docker:
-        - image: cimg/rust:1.55.0
-
+        - image: spectare/rust-build:latest
+        - image: spectare/oidc-token-test-service:latest
+        
       environment:
         # Set your codecov token if your repository is private.
         CODECOV_TOKEN: "CHANGE_TO_VALID_TOKEN" 
         TZ: "/usr/share/zoneinfo/Europe/Paris"
-        # Setting environment for the oidc-token-test-service
-        BIND: 0.0.0.0
-        PORT: 9090
-
+      
       steps:
         - checkout
         - restore_cache:
@@ -19,6 +17,7 @@
         - run:
             name: Stable Build
             command: |
+              cargo version
               cargo build
         - run:
             name: Test
