dependency update to actix 4 rc.2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,30 +11,30 @@ keywords = ["actix", "http", "web", "cryptography"]
 license = "MIT"
 name = "actix-4-jwt-auth"
 repository = "https://github.com/spectare/actix-4-jwt-auth"
-version = "0.3.1"
+version = "0.4.0"
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-actix-rt = "2.5.0"
-actix-service = "2.0.1"
-actix-web = "4.0.0-beta.12"
+actix-rt = "2.6.0"
+actix-service = "2.0.2"
+actix-web = "4.0.0-rc.2"
 biscuit = "0.6.0-beta1"
 bytes = "1.1.0"
-derive_more = "0.99.16"
+derive_more = "0.99.17"
 env_logger = "0.9.0"
-futures = "0.3.15"
-futures-core = {version = "0.3.7", default-features = false, features = ["alloc"]}
-futures-util = {version = "0.3.7", default-features = false, features = ["alloc"]}
-log = "0.4.11"
-reqwest = {version = "0.11.4", features = ["json", "blocking"]}
+futures = "0.3.19"
+futures-core = {version = "0.3.19", default-features = false, features = ["alloc"]}
+futures-util = {version = "0.3.19", default-features = false, features = ["alloc"]}
+log = "0.4.14"
+reqwest = {version = "0.11.9", features = ["json", "blocking"]}
 sanitize-filename = "0.3"
 serde = {version = "1", features = ["derive"]}
 serde_derive = "1"
 serde_json = "1"
-thiserror = "1.0.29"
-tokio = {version = "1.6.0", features = ["full"]}
+thiserror = "1.0.30"
+tokio = {version = "1.16.1", features = ["full"]}
 
 [dev-dependencies]
 pretty_assertions = "1.0.0"
