--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,33 @@
-  version: 2.1
-  jobs:
-    build:
-      docker:
-        - image: spectare/rust-build:latest
-        - image: spectare/oidc-token-test-service:latest
-        
-      environment:
-        # Set your codecov token if your repository is private.
-        CODECOV_TOKEN: "CHANGE_TO_VALID_TOKEN" 
-        TZ: "/usr/share/zoneinfo/Europe/Paris"
-      
-      steps:
-        - checkout
-        - restore_cache:
-            key: project-cache
-        - run:
-            name: Stable Build
-            command: |
-              cargo version
-              cargo build
-        - run:
-            name: Test
-            command: cargo test --verbose --jobs 1 --all
-        # - run:
-        #     name: Upload Coverage
-        #     command: |
-        #       .scripts/codecov.sh
-        - save_cache:
-            key: project-cache
-            paths:
-              - "~/.cargo"
-              - "./target"
+version: 2.1
+jobs:
+  build:
+    docker:
+      - image: cimg/rust:1.57.0
+      - image: spectare/oidc-token-test-service:latest
 
+    environment:
+      # Set your codecov token if your repository is private.
+      CODECOV_TOKEN: "CHANGE_TO_VALID_TOKEN"
+      TZ: "/usr/share/zoneinfo/Europe/Paris"
+
+    steps:
+      - checkout
+      - restore_cache:
+          key: project-cache
+      - run:
+          name: Stable Build
+          command: |
+            cargo version
+            cargo build
+      - run:
+          name: Test
+          command: cargo test --verbose --jobs 1 --all
+      # - run:
+      #     name: Upload Coverage
+      #     command: |
+      #       .scripts/codecov.sh
+      - save_cache:
+          key: project-cache
+          paths:
+            - "~/.cargo"
+            - "./target"
