Changed setup of OIDCValidator to support async with await

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["actix", "http", "web", "cryptography"]
 license = "MIT"
 name = "actix-4-jwt-auth"
 repository = "https://github.com/spectare/actix-4-jwt-auth"
-version = "0.4.4"
+version = "0.5.0"
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
@@ -19,7 +19,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 actix-rt = "2.6.0"
 actix-service = "2.0.2"
-actix-web = "4.1.0"
+actix-web = { version="4.1.0", features=["rustls"]}
 biscuit = "0.6.0-beta1"
 bytes = "1.1.0"
 derive_more = "0.99.17"
@@ -29,6 +29,7 @@ futures-core = {version = "0.3.19", default-features = false, features = ["alloc
 futures-util = {version = "0.3.19", default-features = false, features = ["alloc"]}
 log = "0.4.14"
 reqwest = {version = "0.11.9", features = ["json", "blocking"]}
+awc = { version="3.0.1", features=["rustls"] }
 sanitize-filename = "0.4"
 serde = {version = "1", features = ["derive"]}
 serde_derive = "1"
