--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,31 +11,26 @@ keywords = ["actix", "http", "web", "cryptography"]
 license = "MIT"
 name = "actix-4-jwt-auth"
 repository = "https://github.com/spectare/actix-4-jwt-auth"
-version = "0.6.1"
+version = "1.0.0"
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-actix-rt = "2.7.0"
-actix-service = "2.0.2"
 actix-web = { version="4.2.1", features=["rustls"]}
 biscuit = "0.6.0-beta1"
-bytes = "1.3.0"
-derive_more = "0.99.17"
-env_logger = "0.10.0"
 futures = "0.3.25"
 futures-core = {version = "0.3.25", default-features = false, features = ["alloc"]}
 futures-util = {version = "0.3.25", default-features = false, features = ["alloc"]}
-log = "0.4.17"
-reqwest = {version = "0.11.13", features = ["json", "blocking"]}
 awc = { version="3.0.1", features=["rustls"] }
-sanitize-filename = "0.4"
 serde = {version = "1", features = ["derive"]}
 serde_derive = "1"
 serde_json = "1"
 thiserror = "1.0.38"
-tokio = {version = "1.23.0", features = ["full"]}
 
 [dev-dependencies]
 pretty_assertions= "1.3.0"
+actix-rt = "2.7.0"
+bytes = "1.3.0"
+ring = "~0.16.20"
+num = "0.3"
