--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,20 +17,21 @@ version = "1.0.0"
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-actix-web = { version="4.2.1", features=["rustls"]}
-biscuit = "0.6.0-beta1"
-futures = "0.3.25"
-futures-core = {version = "0.3.25", default-features = false, features = ["alloc"]}
-futures-util = {version = "0.3.25", default-features = false, features = ["alloc"]}
-awc = { version="3.0.1", features=["rustls"] }
+actix-web = { version="4.4.0", features=["rustls"]}
+biscuit = "0.7.0"
+#biscuit = { path = "../biscuit/" }
+futures = "0.3.28"
+futures-core = {version = "0.3.28", default-features = false, features = ["alloc"]}
+futures-util = {version = "0.3.28", default-features = false, features = ["alloc"]}
+awc = { version="3.2.0", features=["rustls"] }
 serde = {version = "1", features = ["derive"]}
 serde_derive = "1"
 serde_json = "1"
-thiserror = "1.0.38"
+thiserror = "1.0.49"
 
 [dev-dependencies]
 pretty_assertions= "1.3.0"
-actix-rt = "2.7.0"
-bytes = "1.3.0"
-ring = "~0.16.20"
+actix-rt = "2.9.0"
+bytes = "1.5.0"
+ring = "0.17.5"
 num = "0.4"
